# invenio-theme-iform

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  MANIFEST.in  README.rst  babel.ini  devenv.nix  eslint.config.mjs  package.json  prettier.config.mjs  pyproject.toml  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: publish.yml  pypi-publish.yml  tagging.yml  tests.yml
.tx/: config
docs/: Makefile  api.rst  authors.rst  changes.rst  conf.py  configuration.rst  contributing.rst  index.rst  installation.rst  make.bat  usage.rst
invenio_theme_iform/: __init__.py  config.py  ext.py  views.py
invenio_theme_iform/assets/semantic-ui/js/invenio_theme_iform/: theme.js
invenio_theme_iform/assets/semantic-ui/less/invenio_theme_iform/: accounts.less  footer.less  header.less  overrides.less  theme.less  variables.less
invenio_theme_iform/templates/invenio_theme_iform/: 423.html  base.html  benefits.html  contact_us.html  default_error.html  footer.html  frontpage_overview.html  header.html  navbar.html  overview.html  recent_uploads.html
invenio_theme_iform/templates/invenio_theme_iform/accounts/: accounts_base.html  header_login.html  login_user.html  register_user.html
scripts/: test.py  test_docs.py
scripts/hooks/pre-push/: check_version_increment.py
tests/: conftest.py  test_invenio_theme_iform.py
