# -*- coding: utf-8 -*-
#
# Copyright (C) 2020-2025 Graz University of Technology.
# Copyright (C) 2025 I-Form Advanced Research Manufacturing Research Centre.
#
# invenio-theme-iform is free software; you can redistribute it and/or
# modify it under the terms of the MIT License; see LICENSE file for more
# details.

[metadata]
name = invenio-theme-iform
version = attr: invenio_theme_iform.__version__
description = "Invenio module for the I-Form theme."
long_description = file: README.rst, CHANGES.rst
keywords = invenio theme invenioRDM I-Form
license = MIT
author = ["I-Form Advanced Research Manufacturing Research Centre", "Graz University of Technology"]
author_email = cian.hughes@dcu.ie
url = https://github.com/Cian-H/invenio-theme-iform
platforms = any
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3.12
    Development Status :: 3 - Alpha

[options]
include_package_data = True
packages = find:
python_requires = >=3.12
zip_safe = False
install_requires =
    invenio-assets>=2.0.0
    invenio-i18n>=1.3.1
    invenio_config_iform>=0.11.0
    invenio_records_global_search>=0.0.1
    invenio_records_marc21>=0.21.0

[options.extras_require]
tests =
    invenio-app>=1.3.4,<2.0.0
    invenio-previewer>=2.2.0
    invenio-rdm-records<17.0.0
    invenio-search[opensearch2]>=2.1.0
    pytest<8.0.0
    pytest-black-ng>=0.4.0
    pytest-invenio>=2.1.0
    Sphinx>=4.5.0

[options.entry_points]
invenio_base.apps =
    invenio_theme_iform = invenio_theme_iform:InvenioThemeIform
invenio_base.blueprints =
    invenio_theme_iform = invenio_theme_iform.views:ui_blueprint
invenio_i18n.translations =
    messages = invenio_theme_iform
invenio_assets.webpack =
    invenio_theme_iform_theme = invenio_theme_iform.webpack:theme
invenio_config.module =
    invenio_theme_iform = invenio_theme_iform.config
invenio_base.finalize_app =
    invenio_theme_iform = invenio_theme_iform.ext:finalize_app

[aliases]
test = pytest

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[pydocstyle]
add_ignore = D401

[compile_catalog]
directory = invenio_theme_iform/translations/
use-fuzzy = True

[extract_messages]
copyright_holder = I-Form Advanced Research Manufacturing Research Centre, Graz University of Technology
msgid_bugs_address = cian.hughes@dcu.ie
mapping-file = babel.ini
output-file = invenio_theme_iform/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_theme_iform/translations/messages.pot
output-dir = invenio_theme_iform/translations/

[update_catalog]
input-file = invenio_theme_iform/translations/messages.pot
output-dir = invenio_theme_iform/translations/

[isort]
profile=black

[check-manifest]
ignore =
    *-requirements.txt

[tool:pytest]
addopts = --black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_theme_iform --cov-report=term-missing tests invenio_theme_iform
testpaths = tests invenio_theme_iform
live_server_scope = module
